Fixes for Double(double) in java.lang.Double has been deprecated